--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Home</title>
 </head>
 <body>
-<img src="16-9banner.png" alt="no img" style="max-width: 100vw; max-height: 100vh; position: absolute; top: 0; left: 0"/>
+<img src="16-9banner.png" alt="no img" style="max-width: 100vw; position: absolute; top: 0; left: 0"/>
 </body>
 </html>
