--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Home</title>
 </head>
-<body>
+<body style="overflow: hidden">
 <img src="16-9banner.png" alt="no img" style="max-width: 100vw; position: absolute; top: 0; left: 0"/>
 </body>
 </html>
